# backblaze_file_manager

./: README.md  hello.py  pyproject.toml  test.py
.github/workflows/: pylint.yml
src/: app.py  backblaze.py  metadata.py
