[project]
name = "file-renamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "b2sdk>=2.7.0",
    "hachoir>=3.3.0",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "pillow-heif>=0.21.0",
    "pyexiftool>=0.5.6",
    "tqdm>=4.67.1",
]
